--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <main>
-      <h1>Client-side rendering</h1>
     </main>
+    <button id="getData"> Get the data! </button>
     <script src="bundle.js"></script>
   </body>
 </html>
